<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="133dp"
        android:layout_height="158dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="92dp"
        android:contentDescription="@string/img"
        android:src="@drawable/untitled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welPg"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/logout"
        android:layout_width="51dp"
        android:layout_height="49dp"
        android:layout_marginStart="344dp"
        android:layout_marginLeft="344dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/lo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/home_page"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welPg" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="370dp"
        android:layout_height="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/line"
        android:src="@drawable/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/personalInfo"
        android:layout_width="87dp"
        android:layout_height="83dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/pi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/add"
        android:layout_width="77dp"
        android:layout_height="78dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/add"
        app:layout_constraintStart_toEndOf="@+id/personalInfo"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/list"
        android:layout_width="88dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/list"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dp"
        android:layout_height="46dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:text="@string/pI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalInfo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="69dp"
        android:layout_height="46dp"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="5dp"
        android:text="@string/qa"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="81dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="7dp"
        android:text="@string/mvl"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/list" />

</androidx.constraintlayout.widget.ConstraintLayout>


